--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Début de la section card -->
     <section class="card">
       <article class="card__container">
         <div class="card__container__images">
@@ -68,5 +69,6 @@
         </div>
       </article>
     </section>
+    <!-- Fin de la section card -->
   </body>
 </html>
