Ajout du fichier normalize.css dans le fichier index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       type="image/x-icon"
     />
     <!-- Importation des styles -->
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
